# picoscope-libusb

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
android-lib/: build.gradle.kts  consumer-rules.pro
android-lib/src/main/: AndroidManifest.xml
android-lib/src/main/cpp/: CMakeLists.txt  picoscope_jni.c
android-lib/src/main/cpp/shim/libusb-1.0/: libusb.h
android-lib/src/main/java/io/github/wasabules/ps2204/: PicoScope2204A.java
docs/: ANDROID_DRIVER_NOTES.md  android.md  firmware-extraction.md  protocol.md  sdk-streaming-protocol.md
driver/: CMakeLists.txt  Makefile  bench_enhanced_res.c  bench_specs.c  bench_tb_timing.c  bench_trigger_delay.c  calibrate_ranges.c  calibrate_siggen.c  debug_capture.c  debug_tb0.c  dump_eeprom.c  picoscope2204a.c  picoscope2204a.h  test_driver.c  test_ets.c  test_native_streaming.c  test_sdk_streaming.c  validate_all.c
driver/jni/: PicoScope2204A.java  picoscope_jni.c
gui/: Makefile  README.md  app.go  app_calibration.go  app_capture.go  app_channel.go  app_connection.go  app_decoder.go  app_export.go  app_firmware.go  app_measurements.go  app_siggen.go  app_streaming.go  app_timebase.go  app_trigger.go  cgo.go  cgo_wrappers.h  constants.go  go.mod  main.go  types.go  wails.json
gui/cmd/native-dump/: main.go
gui/cmd/siggen-diag/: main.go
gui/cmd/uart-diag/: main.go
gui/decoder/: afnor.go  can.go  can_test.go  classifier.go  dcf77.go  i2c.go  i2c_test.go  irig.go  primitives.go  registry.go  session.go  session_test.go  spi.go  spi_test.go  synth_test.go  timecode_auto.go  timecode_test.go  types.go  uart.go  uart_test.go
gui/frontend/: index.html  package-lock.json  package.json
gui/frontend/src/: App.svelte  style.css
gui/frontend/src/lib/: CalibrationModal.svelte  DecoderLog.svelte  DecoderPanel.svelte  FirmwareSetupModal.svelte  WaveformCanvas.svelte
gui/frontend/src/lib/components/: AnalysisControls.svelte  CalibrationPanel.svelte  ChannelPanel.svelte  DecoderPanel.svelte  DiagnosticsPanel.svelte  DisplayControls.svelte  ErrorToast.svelte  MeasurementsBar.svelte  PresetsPanel.svelte  SiggenControls.svelte  StatusBar.svelte  TimebaseControls.svelte  TriggerControls.svelte
gui/frontend/src/lib/decoders/: can.js  i2c.js  index.js  primitives.js  registry.js  spi.js  types.js  uart.js
gui/frontend/src/lib/dsp/: fft.js  math.js  measurements.js  ring.js  stats.js
gui/frontend/src/lib/modals/: CalibrationModal.svelte  FirmwareSetupModal.svelte
gui/frontend/src/lib/utils/: format.js
python/: picoscope_libusb_full.py
python/examples/: README.md  uart_capture.py  uart_send.py  validation.py
python/reverse_engineering/: README.md
python/reverse_engineering/dual_channel/: test_dual_channel.py  test_dual_channel_v1.py  test_sdk_dual_capture.py
python/reverse_engineering/experiments/: test_10mhz.py  test_async_waveform.py  test_async_wf_libusb1.py  test_ep06.py  test_ep06_reset.py  test_no_waveform.py  test_picoscope.sh  test_sdk_init_our_capture.py  test_sdk_then_ep06.py  trace_picoscope7.sh
python/reverse_engineering/fast_block/: test_fast_block.py
python/reverse_engineering/native_streaming/: test_native_rate_probe.py  test_native_sdk_match.py  test_native_steady.py  test_native_streaming.py  test_native_tight.py  test_native_with_polls.py
python/reverse_engineering/pga/: test_full_firmware_pga.py  test_hw_range.py  test_hw_range2.py  test_hw_range3.py  test_pga_debug.py  test_pga_quick.py  test_pga_raw.py  test_range_effect.py  test_range_encoding.py  test_sdk_pga.py
python/reverse_engineering/raw_format/: test_exact_sdk_bytes.py  test_raw_bytes.py  test_raw_data_compare.py
python/reverse_engineering/sdk_capture/: analyze_protocol.py  analyze_range_pcap.py  analyze_trace.py  capture_range_commands.py  capture_range_sdk.py  capture_sdk_all_ranges.py  capture_sdk_range_diff.py  capture_sdk_ranges.py  capture_sdk_ranges_simple.py  capture_sdk_with_strace.py  decode_protocol.py  test_sdk_range_capture.py  test_sdk_streaming_capture.py  trace_sdk_features.c  trace_sdk_siggen_stream.py  trace_sdk_stream.py
tools/firmware-extractor/: Makefile  extract-from-pcap.py  extract.sh  usb_interceptor.c
tools/sdk-stream-trace/: active_cmds.py  analyze_autostop_matrix.py  analyze_cmd2_bytes.py  analyze_heartbeat.py  analyze_phase22_vs_baseline.py  dump_autostop_packets.py  experiments.c  our_stream_trace.c  phase_table.py  sdk_autostop_matrix.c  sdk_open_only.c  sdk_stream_param.c  sdk_stream_trace.c  verify_old_phase22.py
